// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`OcDrop > tippy > renders tippy 1`] = `
<div>
  <p
    aria-expanded="true"
    id="trigger"
  >
    trigger
  </p>
  <div
    data-tippy-root=""
    id="tippy-10"
    style="z-index: 9999; visibility: visible; position: absolute; left: 0px; top: auto; margin: 0px; right: auto; bottom: 0px; transform: translate(0px, 0px); max-height: -20px; overflow-y: auto; overflow-x: hidden;"
  >
    <div
      class="tippy-box"
      data-animation="fade"
      data-escaped=""
      data-placement="top"
      data-reference-hidden=""
      data-state="visible"
      data-theme="none"
      role="listbox"
      style="max-width: 416px; transition-duration: 300ms;"
      tabindex="-1"
    >
      <div
        class="tippy-content"
        data-state="visible"
        style="transition-duration: 300ms;"
      >
        <div
          class="oc-drop oc-box-shadow-medium oc-rounded"
          id="oc-drop-15"
        >
          <!-- eslint-enable vuejs-accessibility/no-static-element-interactions -->
           
          <!-- eslint-enable vuejs-accessibility/click-events-have-key-events -->
           
          <div
            class="oc-card oc-card-body oc-background-secondary oc-p-m"
          >
            
            show
            
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`OcDrop > tippy > renders tippy 2`] = `
<div>
  <p
    aria-expanded="false"
    id="trigger"
  >
    trigger
  </p>
  <div
    data-tippy-root=""
    id="tippy-10"
    style="z-index: 9999; visibility: hidden; position: absolute; left: 0px; top: auto; margin: 0px; right: auto; bottom: 0px; transform: translate(0px, 0px); max-height: -20px; overflow-y: auto; overflow-x: hidden; pointer-events: none;"
  >
    <div
      class="tippy-box"
      data-animation="fade"
      data-escaped=""
      data-placement="top"
      data-reference-hidden=""
      data-state="hidden"
      data-theme="none"
      role="listbox"
      style="max-width: 416px; transition-duration: 250ms;"
      tabindex="-1"
    >
      <div
        class="tippy-content"
        data-state="hidden"
        style="transition-duration: 250ms;"
      >
        <div
          class="oc-drop oc-box-shadow-medium oc-rounded"
          id="oc-drop-15"
        >
          <!-- eslint-enable vuejs-accessibility/no-static-element-interactions -->
           
          <!-- eslint-enable vuejs-accessibility/click-events-have-key-events -->
           
          <div
            class="oc-card oc-card-body oc-background-secondary oc-p-m"
          >
            
            show
            
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`OcDrop > tippy > renders tippy 3`] = `
<div>
  <p
    aria-expanded="true"
    id="trigger"
  >
    trigger
  </p>
  <div
    data-tippy-root=""
    id="tippy-10"
    style="z-index: 9999; visibility: visible; position: absolute; left: 0px; top: auto; margin: 0px; right: auto; bottom: 0px; transform: translate(0px, 0px); max-height: -20px; overflow-y: auto; overflow-x: hidden;"
  >
    <div
      class="tippy-box"
      data-animation="fade"
      data-escaped=""
      data-placement="top"
      data-reference-hidden=""
      data-state="visible"
      data-theme="none"
      role="listbox"
      style="max-width: 416px; transition-duration: 300ms;"
      tabindex="-1"
    >
      <div
        class="tippy-content"
        data-state="visible"
        style="transition-duration: 300ms;"
      >
        <div
          class="oc-drop oc-box-shadow-medium oc-rounded"
          id="oc-drop-15"
        >
          <!-- eslint-enable vuejs-accessibility/no-static-element-interactions -->
           
          <!-- eslint-enable vuejs-accessibility/click-events-have-key-events -->
           
          <div
            class="oc-card oc-card-body oc-background-secondary oc-p-m"
          >
            
            show
            
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
